Replace Disqus comment system with GitHub Issues + utteranc.es Remove disqus parameter Change default color scheme to dark (testing) Change repo visibility to public

--- a/assets/scss/_fuji-theme/_base.scss
+++ b/assets/scss/_fuji-theme/_base.scss
@@ -22,12 +22,21 @@
   --color-codebg: #{$dark-color-codebg};
 }
 
-body[data-theme='auto'] {
-  @include light();
+// body[data-theme='auto'] {
+//   @include light();
 
-  @media (prefers-color-scheme: dark) {
-    @include dark();
-    @import '_dark-diff'; // things different from light
+//   @media (prefers-color-scheme: dark) {
+//     @include dark();
+//     @import '_dark-diff'; // things different from light
+//   }
+// }
+
+body[data-theme='auto'] {
+  @include dark();
+  @import '_dark-diff'; // things different from light
+
+  @media (prefers-color-scheme: light) {
+    @include light();
   }
 }
 
